--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunHeader.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunHeader.cshtml
@@ -132,7 +132,7 @@
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="mobilenavbar" aria-labelledby="offcanvasWithBothOptionsLabel">
             <nav class="sidebar-nav scroll-sidebar">
                 <div class="offcanvas-header justify-content-between">
-                    <img src="~/assets/images/logos/favicon.ico" alt="modernize-img" class="img-fluid" />
+                    <img src="~/web/images/Group.png" alt="modernize-img" class="img-fluid" />
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
             </nav>
