--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -441,7 +441,7 @@
 <script id="news-template" type="text/x-dot-template">
     {{ for(var i = 0; i < it.newsList.length; i++) { }}
           <article class="col-lg-4 col-6">
-                <div class="service-card bg-hover-green">
+                <div class="service-card service-card-c bg-hover-green">
                     <div class="post-thumb d-flex mb-15 img-hover-scale justify-content-center">
                         <a href="/Service/ServiceDetail/{{=it.newsList[i].idDichVu}}" class="service-img-wrapper">
                             <img class="border-radius-15" src="{{=it.newsList[i].urlImage}}" width="50" height="50" alt="">
