--- a/WebAppService/Views/Shared/_ClientMenu.cshtml
+++ b/WebAppService/Views/Shared/_ClientMenu.cshtml
@@ -44,42 +44,42 @@
                 <nav>
                     <ul class="main-menu d-none d-lg-inline">
                         <li>
-                            <a href="/AboutUs/AboutUs">
+                            <a href="/AboutUs/AboutUs" class="text-menu">
                                 Về SunMedical
                             </a>
                         </li>
                         <li>
-                            <a href="/Service/ServiceList">
+                            <a href="/Service/ServiceList" class="text-menu">
                                 Chuyên Khoa
                             </a>
                         </li>
                         <li>
-                            <a href="/Service/ServiceList">
+                            <a href="/Service/ServiceList" class="text-menu">
                                 Dịch Vụ Đặc Biệt
                             </a>
                         </li>
                         <li>
-                            <a href="/Doctor/ListDoctor">
+                            <a href="/Doctor/ListDoctor" class="text-menu">
                                 Bác Sĩ
                             </a>
                         </li>
                         <li>
-                            <a href="/Blog/Blog">
+                            <a href="/Blog/Blog" class="text-menu">
                                 Tin Tức
                             </a>
                         </li>
                         <li>
-                            <a href="/LienHe/LienHe">
+                            <a href="/LienHe/LienHe" class="text-menu">
                                 Liên Hệ
                             </a>
                         </li>
                         <li>
-                            <a href="/FAQ/Index">
+                            <a href="/FAQ/Index" class="text-menu">
                                 FAQ
                             </a>
                         </li>
                     </ul>
-                    <a href="#" class="main-menu d-none d-lg-inline btn-orrange ml-2">Đăng Nhập</a>
+                    <a href="#" class="main-menu d-none d-lg-inline btn-orrange btn-login ml-2">Đăng Nhập</a>
                 </nav>
             </div>
         </div>
