--- a/WebAppService/wwwroot/web/assets/css/doctor-detail.css
+++ b/WebAppService/wwwroot/web/assets/css/doctor-detail.css
@@ -42,7 +42,7 @@
 }
 
 .name {
-    font-size: 28px;
+    font-size: 26px;
     font-weight: 800;
     color: #2F4848;
     margin-bottom: 8px;
@@ -90,6 +90,10 @@
 
 .section li {
     margin-bottom: 8px;
+}
+
+li {
+    list-style-type: disc;
 }
 
 i {
