--- a/WebAppService/Views/Shared/_Layout.cshtml
+++ b/WebAppService/Views/Shared/_Layout.cshtml
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/x-icon" href="~/web/images/icon_Group.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="~/web/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/web/clinic_website.styles.css" asp-append-version="true" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -23,7 +22,6 @@
     <link rel="stylesheet" href="~/web/assets/css/widgets.css">
     <link rel="stylesheet" href="~/web/assets/css/color.css">
     <link rel="stylesheet" href="~/web/assets/css/responsive.css">
-    <link rel="stylesheet" href="~/web/assets/css/style.css">
     <link rel="stylesheet" href="~/web/assets/css/widgets.css">
     <link rel="stylesheet" href="~/web/assets/css/color.css">
     <link rel="stylesheet" href="~/web/assets/css/responsive.css">
@@ -32,10 +30,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <style>
+        .skiptranslate {
+            display: none !important;
+        }
+
+        body {
+            top: 0px !important;
+        }
+
+        .goog-logo-link, .goog-te-gadget-icon {
+            display: none !important;
+        }
+    </style>
 </head>
 
 <body>
     <!-- Preloader Start -->
+    <div id="google_translate_element" style="display:none"></div>
+
     <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
             <div class="preloader-inner position-relative">
@@ -62,9 +75,9 @@
                     <span><i class="fas fa-envelope"></i> <a href="mailto:support@carelink.com" class="text-white">support@carelink.com</a></span>
                     <span> <a href="tel:628646442222" class="text-white"> <i class="fas fa-phone"></i> +62 864 644 2222</a></span>
                     <div class="flags">
-                        <img src="https://flagcdn.com/vn.svg" alt="Vietnam Flag">
-                        <img src="https://flagcdn.com/jp.svg" alt="Japan Flag">
-                        <img src="https://flagcdn.com/tw.svg" alt="Taiwan Flag">
+                        <img src="https://flagcdn.com/vn.svg" alt="Vietnam Flag" onclick="fcTranslate('vi/vi')" >
+                        <img src="https://flagcdn.com/jp.svg" alt="Japan Flag" onclick="fcTranslate('vi/ja')">
+                        <img src="https://flagcdn.com/tw.svg" alt="Taiwan Flag" onclick="fcTranslate('vi/en')">
                         <img src="https://flagcdn.com/gb.svg" alt="UK Flag">
                     </div>
                 </div>
@@ -169,8 +182,23 @@
     <script src="~/web/assets/js/vendor/jquery.counterup.min.js"></script>
     <script src="~/web/assets/js/vendor/jquery.theia.sticky.js"></script>
     <script src="~/web/assets/js/main.js"></script>
+    <script src="~/web/assets/js/vendor/tsl.js?cb=googleTranslateElementInit"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        function hideGoogleTranslateBar() {
+            const frame = document.querySelector('iframe.goog-te-banner-frame');
+            if (frame) {
+                frame.style.display = 'none';
+                document.body.style.top = '0px';
+            }
+        }
+
+        // Đợi Google Translate load xong rồi ẩn
+        window.addEventListener('load', function () {
+            setTimeout(hideGoogleTranslateBar, 1000); // Delay 1 giây
+        });
+    </script>
     <script type="text/javascript">
         window.onload = function () {
             const menuIcon = document.getElementById("menuToggle");
@@ -195,6 +223,22 @@
             });
             }
         };
+        function fcTranslate(lang) {
+            document.cookie = `googtrans=/${lang}; path=/`;
+            document.cookie = `googtrans=/${lang}; domain=${window.location.hostname}; path=/`;
+              setTimeout(function () {
+            location.reload();
+        }, 300); // Cho cookie có thời gian ghi
+        }
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'vi',
+                includedLanguages: 'en,vi,ja,zh-CN,fr,de',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            }, 'google_translate_element');
+            $("#:2.container").hide();
+        }
+
     </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
