--- a/WebAppService/wwwroot/web/assets/css/home.css
+++ b/WebAppService/wwwroot/web/assets/css/home.css
@@ -79,6 +79,10 @@
     color: #757575;
 }
 
+.service-card-c
+{
+    height:290px;
+}
 .service-card {
     background: #ffffff;
     border-radius: 25.91px;
@@ -400,6 +404,7 @@
     }
 
     .author-bio {
+        padding-top: 43px !important;
         text-align: center;
     }
 
@@ -413,7 +418,7 @@
         width: 350px;
         height: 120px;
         margin-left: 0px;
-        top: -72px;
+        top: -91px;
         text-align: center;
     }
 
