--- a/WebAppService/Views/LienHe/LienHe.cshtml
+++ b/WebAppService/Views/LienHe/LienHe.cshtml
@@ -77,8 +77,11 @@
                                     <div class="form-group col-md-12">
                                         <input type="email" class="form-control" id="email" placeholder="Nhập email của bạn...">
                                     </div>
+                                    <div class="form-group mt-2 col-md-12" ">
+                                        <div class="g-recaptcha" data-sitekey="6LfAy5QrAAAAAKAM2W0qEe59ZC_h8y1R4IVRc6Wc"></div>
+                                    </div>
                                     <div class="form-group col-md-6 hide-on-mobile" style="margin-top:30px">
-                                        <a href="#" onclick="SendForm()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100" style=" padding: 0px 67px;font-weight: 700;font-family: 'Montserrat'">Gửi</a>
+                                        <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100" style=" padding: 0px 67px;font-weight: 700;font-family: 'Montserrat'">Gửi</a>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mt-form p-0">
@@ -92,8 +95,12 @@
                                 </div>
                             </div>
                             <!-- Nút gửi để dưới toàn form -->
-                            <div class="form-group col-md-12 p-0  d-block d-md-none">
+                        
+                            <!--div class="form-group col-md-12 p-0  d-block d-md-none">
                                 <a href="#" onclick="SendForm()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
+                            </div>-->
+                            <div class="form-group col-md-12 p-0  d-block d-md-none">
+                                <a href="#" onclick="CheckBeforeSend()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
                             </div>
                         </div>
                     </div>
@@ -111,3 +118,53 @@
         </div>
     </div>
 </div>
+
+  <script>
+  function CheckBeforeSend() {
+    var response = grecaptcha.getResponse();
+    if (response.length === 0) {
+      alert("Vui lòng xác minh bạn không phải robot (tick vào checkbox).");
+      return;
+    }
+    // Nếu reCAPTCHA đã tick, gọi hàm SendForm
+    SendForm();
+  }
+
+  function SendForm() {
+    var ho_ten = $("#ho_ten").val();
+    var so_dien_thoai = $("#so_dien_thoai").val();
+    var email = $("#email").val();
+    var loi_nhan = $("#loi_nhan").val();
+
+    if (ho_ten == "") {
+        alert("Họ tên không được để trống!");
+        $("#ho_ten").focus();
+        return;
+    }
+    if (loi_nhan == "") {
+        alert("Nội dung không được để trống!");
+        $("#loi_nhan").focus();
+        return;
+    }
+
+    var data = {
+        ho_ten: ho_ten,
+        so_dien_thoai: so_dien_thoai,
+        email: email,
+        loi_nhan: loi_nhan,
+        gRecaptchaResponse: grecaptcha.getResponse()
+    };
+
+    $.ajax({
+        type: "POST",
+        url: "/verify",
+        data: data,
+        success: function (res) {
+            alert(res); // Trả về kết quả xử lý từ controller
+        },
+        error: function () {
+            alert("Lỗi kết nối tới server.");
+        }
+    });
+  }
+</script>
