--- a/WebAppService/Views/LienHe/LienHe.cshtml
+++ b/WebAppService/Views/LienHe/LienHe.cshtml
@@ -57,7 +57,7 @@
                                 <img src="@Url.Content("~/root/imglh.png")" alt="Doctor" class="doctor-overlay">
                             </div>
                         </div>
-                        <div class="form col-md-8 position-absolute tranform-x  px-form bg-form" style="z-index:100">
+                        <div class="form col-md-8 position-absolute tranform-x ml-30  px-form bg-form" style="z-index:100">
                             <div class="txt-dkk">Đăng ký khám, nhận thông tin mới từ chúng tôi!</div>
                             <div class="mt-30 row">
                                 <div class="col-md-6 p-0">
@@ -77,8 +77,9 @@
                                     <div class="form-group col-md-12">
                                         <input type="email" class="form-control" id="email" placeholder="Nhập email của bạn...">
                                     </div>
-                                    <div class="form-group mt-2 col-md-12" ">
-                                        <div class="g-recaptcha" data-sitekey="6LfAy5QrAAAAAKAM2W0qEe59ZC_h8y1R4IVRc6Wc"></div>
+                                  
+                                    <div class="form-group mt-2 col-md-12">
+                                        <div class="g-recaptcha" data-sitekey="6LdNwJQrAAAAAKdxPV9Did1D60BrdPkEyUKuL4VP"></div>
                                     </div>
                                     <div class="form-group col-md-6 hide-on-mobile" style="margin-top:30px">
                                         <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100" style=" padding: 0px 67px;font-weight: 700;font-family: 'Montserrat'">Gửi</a>
