--- a/WebAppService/Areas/Admin/Views/Shared/_ViewAdmin.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_ViewAdmin.cshtml
@@ -26,7 +26,7 @@
 
 <body>
 	<div class="preloader">
-		<img src="~/assets/images/logos/favicon.png" alt="loader" class="lds-ripple img-fluid" />
+		<img src="~/web/images/icon_Group.png" alt="loader" class="lds-ripple img-fluid" />
 	</div>
 	<div id="main-wrapper">
 		@Html.Partial("~/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml", data)
