--- a/WebAppService/Views/LienHe/LienHe.cshtml
+++ b/WebAppService/Views/LienHe/LienHe.cshtml
@@ -79,7 +79,7 @@
                                     </div>
                                   
                                     <div class="form-group mt-2 col-md-12">
-                                        <div class="g-recaptcha" data-sitekey="6LdNwJQrAAAAAKdxPV9Did1D60BrdPkEyUKuL4VP"></div>
+                                        <div class="g-recaptcha" data-sitekey="@ViewBag.ReCaptchaKey"></div>
                                     </div>
                                     <div class="form-group col-md-6 hide-on-mobile" style="margin-top:30px">
                                         <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100" style=" padding: 0px 67px;font-weight: 700;font-family: 'Montserrat'">Gửi</a>
