--- a/WebAppService/Views/Shared/_ClientMenu.cshtml
+++ b/WebAppService/Views/Shared/_ClientMenu.cshtml
@@ -31,10 +31,11 @@
                     <li class="cat-item txt-mobile col-12 p-0"><a href="/FAQ/Index">FAQ</a></li>
                     <li class="cat-item txt-mobile col-12 p-0"><a href="#">Chọn Ngôn Ngữ</a></li>
                     <li class="cat-item txt-mobile col-12 p-0" style="display: flex;display: flex;width: 100%;margin-left: 12px;margin-top: 11px;">
-                        <img class="ml-0 img-fluid icon-langue" src="https://flagcdn.com/vn.svg" alt="Vietnam Flag">
-                        <img class="ml-3 img-fluid icon-langue2" src="https://flagcdn.com/jp.svg" alt="Japan Flag">
-                        <img class="ml-3 img-fluid icon-langue" src="https://flagcdn.com/tw.svg" alt="Taiwan Flag">
-                        <img class="ml-3 img-fluid icon-langue3" src="https://flagcdn.com/gb.svg" alt="UK Flag">
+                        <a href="#" class="translate-btn m-0 p-0" data-lang="vi"> <img src="https://flagcdn.com/vn.svg" class="ml-0 img-fluid icon-langue" alt="Vietnam"></a>
+                        <a href="#" class="translate-btn m-0 p-0" data-lang="ko"> <img src="https://flagcdn.com/kr.svg" class="ml-3 img-fluid icon-langue2" alt="South Korea Flag"></a>
+                        <a href="#" class="translate-btn m-0 p-0" data-lang="ja"> <img src="https://flagcdn.com/jp.svg" class="ml-3 img-fluid icon-langue2" alt="Japan"></a>
+                        <a href="#" class="translate-btn m-0 p-0" data-lang="zh-CN"> <img src="https://flagcdn.com/tw.svg" class="ml-3 img-fluid icon-langue" alt="Chinese"></a>
+                        <a href="#" class="translate-btn m-0 p-0" data-lang="en"> <img src="https://flagcdn.com/gb.svg" class="ml-3 img-fluid icon-langue3" alt="English"></a>
                     </li>
                     <li class="mt-20 mb-20"><a href="#" class="main-menu d-lg-inline btn-orrange ml-2" style="width:fit-content">Đăng Nhập tài khoản</a></li>
                     <li class="cat-item txt-mobile col-12 p-0"><a href="#"><i class="fa fa-map-marker text-white"></i> Ha Noi, Viet Nam</a></li>
