--- a/WebAppService/Views/Shared/_Layout.cshtml
+++ b/WebAppService/Views/Shared/_Layout.cshtml
@@ -7,66 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sun Meidcal</title>
     <link rel="icon" type="image/x-icon" href="~/web/images/icon_Group.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/web/css/site.css" asp-append-version="true" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link href="~/web/css/layout.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/web/assets/css/style.css">
-    <link rel="stylesheet" href="~/web/assets/css/widgets.css">
-    <link rel="stylesheet" href="~/web/assets/css/color.css">
-    <link rel="stylesheet" href="~/web/assets/css/responsive.css">
-    <link rel="stylesheet" href="~/web/assets/css/widgets.css">
-    <link rel="stylesheet" href="~/web/assets/css/color.css">
-    <link rel="stylesheet" href="~/web/assets/css/responsive.css">
-    <link href="~/web/assets/css/main.css" rel="stylesheet" />
-    <link href="~/web/assets/css/mobile.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <script src="https://www.google.com/recaptcha/api.js?hl=vi" async defer></script>
-    <style>
-        .skiptranslate {
-            display: none !important;
-        }
-
-        body {
-            top: 0px !important;
-        }
-
-        .goog-logo-link, .goog-te-gadget-icon {
-            display: none !important;
-        }
-
-        #loadingOverlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(255,255,255,0.8);
-            z-index: 9999;
-            display: none;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
+    @await Html.PartialAsync("_StyleBundle")
 </head>
-
 <body>
-    <!-- Preloader Start -->
-    <div id="google_translate_element" style="display:none"></div>
-    <div id="loadingOverlay">
-        <div class="spinner-border text-primary" role="status">
-            <span class="visually-hidden">Đang trong quá trình chuyển đổi...</span>
-        </div>
-    </div>
     <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
             <div class="preloader-inner position-relative">
@@ -85,22 +28,8 @@
         <aside id="sidebar-wrapper" class="custom-scrollbar offcanvas-sidebar position-right">
             <button class="off-canvas-close"><i class="ti-close"></i></button>
         </aside>
-        <!-- Main Header -->
         <header class="main-header background-white header-style-2">
-            <div class="header-top header-menutop">
-                <div class="contact">
-                    <span><i class="fas fa-map-marker-alt"></i> Ha Noi, Viet Nam</span>
-                    <span><i class="fas fa-envelope"></i> <a href="mailto:support@carelink.com" class="text-white">support@carelink.com</a></span>
-                    <span> <a href="tel:628646442222" class="text-white"> <i class="fas fa-phone"></i> +62 864 644 2222</a></span>
-                    <div class="flags">
-                        <img src="https://flagcdn.com/vn.svg" alt="Vietnam" class="translate-btn" data-lang="vi">
-                        <img src="https://flagcdn.com/kr.svg" alt="South Korea Flag" class="translate-btn" data-lang="ko">
-                        <img src="https://flagcdn.com/jp.svg" alt="Japan" class="translate-btn" data-lang="ja">
-                        <img src="https://flagcdn.com/tw.svg" alt="Chinese" class="translate-btn" data-lang="zh-CN">
-                        <img src="https://flagcdn.com/gb.svg" alt="English" class="translate-btn" data-lang="en">
-                    </div>
-                </div>
-            </div>
+            @await Html.PartialAsync("_HeaderMenu")
             <div class="header-bottom header-sticky background-white text-center">
                 <div class="scroll-progress gradient-bg-1"></div>
                 <div class="mobile_menu d-lg-none d-block"></div>
@@ -112,156 +41,10 @@
             @RenderBody()
         </main>
         <!-- Footer Start-->
-        <footer>
-            <div class="footer-area pt-50" style="background:#EDFFFF">
-                <div class="container">
-                    <div class="row pb-30 p-20">
-                        <div class="col-sm-6 mb-30">
-                            <div class="footer-container">
-                                <div class="footer-left">
-                                    <div class="footer-logo mb-20" style="justify-content: center;">
-                                        <img src="~/web/images/Group.png" alt="Sun Medical Center" height="50" />
-                                    </div>
-
-                                    <p class="footer-desc m-0 text-center">
-                                        Mang đến dịch vụ y tế chất lượng cao với đội ngũ bác sĩ chuyên môn giỏi, trang thiết bị hiện đại và quy trình chăm sóc tận tâm. Chúng tôi cam kết bảo vệ sức khỏe của bạn và gia đình, cung cấp giải pháp y tế toàn diện từ phòng ngừa đến điều trị, giúp bạn an tâm và khỏe mạnh mỗi ngày.
-                                    </p>
-                                    <div class="social-icons mt-20">
-                                        <a href="#" class="social-box fb"><i class="fab fa-facebook-f"></i></a>
-                                        <a href="#" class="social-box tw"><i class="fab fa-twitter"></i></a>
-                                        <a href="#" class="social-box in"><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 col-6">
-                            <ul class="float-left mr-30 font-medium">
-                                <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Company</a></li>
-                                <li class="cat-item cat-item-3 text-c-9"><a href="#">Về chúng tôi</a></li>
-                                <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ</a></li>
-                                <li class="cat-item cat-item-5 text-c-9"><a href="#">Đặt lịch</a></li>
-                                <li class="cat-item cat-item-6 text-c-9"><a href="#">Tìm bác sĩ</a></li>
-                                <li class="cat-item cat-item-7 text-c-9"><a href="#">Điều khoản</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-2 col-6 mb-30">
-                            <ul class="float-left mr-30 font-medium">
-                                <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Support</a></li>
-                                <li class="cat-item cat-item-3 text-c-9"><a href="#">Về chúng tôi</a></li>
-                                <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ</a></li>
-                                <li class="cat-item cat-item-5 text-c-9"><a href="#">Đặt lịch</a></li>
-                                <li class="cat-item cat-item-6 text-c-9"><a href="#">Tìm bác sĩ</a></li>
-                                <li class="cat-item cat-item-7 text-c-9"><a href="#">Điều khoản</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-2 col-6">
-                            <ul class="float-left mr-30 font-medium">
-                                <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Contact</a></li>
-                                <li class="cat-item cat-item-3 text-c-9"><a href="#">Về chúng tôi</a></li>
-                                <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ</a></li>
-                                <li class="cat-item cat-item-5 text-c-9"><a href="#">Đặt lịch</a></li>
-                                <li class="cat-item cat-item-6 text-c-9"><a href="#">Tìm bác sĩ</a></li>
-                                <li class="cat-item cat-item-7 text-c-9"><a href="#">Điều khoản</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- footer-bottom aera -->
-            <div class="footer-bottom-area text-muted" style="background:#EDFFFF">
-                <div class="container">
-                    <div class="footer-border pt-20 pb-20">
-                        <div class="row d-flex align-items-center justify-content-between">
-                            <div class="col-12">
-                                <div class="footer-copy-right">
-                                    <p class="font-small text-muted">Copyright ©2025 <strong>SunMedical</strong></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Footer End-->
-        </footer>
+        @await Html.PartialAsync("_Footer")
     </div>
-    <div class="dark-mark"></div>
-    <script src="~/web/assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="~/web/assets/js/vendor/popper.min.js"></script>
-    <script src="~/web/assets/js/vendor/bootstrap.min.js"></script>
-    <script src="~/web/assets/js/vendor/jquery.slicknav.js"></script>
-    <script src="~/web/assets/js/vendor/owl.carousel.min.js"></script>
-    <script src="~/web/assets/js/vendor/slick.min.js"></script>
-    <script src="~/web/assets/js/vendor/wow.min.js"></script>
-    <script src="~/web/assets/js/vendor/animated.headline.js"></script>
-    <script src="~/web/assets/js/vendor/jquery.magnific-popup.js"></script>
-    <script src="~/web/assets/js/vendor/jquery.scrollUp.min.js"></script>
-    <script src="~/web/assets/js/vendor/jquery.nice-select.min.js"></script>
-    <script src="~/web/assets/js/vendor/perfect-scrollbar.js"></script>
-    <script src="~/web/assets/js/vendor/jquery.counterup.min.js"></script>
-    <script src="~/web/assets/js/vendor/jquery.theia.sticky.js"></script>
-    <script src="~/web/assets/js/main.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script type="text/javascript">
-           function hideGoogleTranslateBar() {
-            const frame = document.querySelector('iframe.goog-te-banner-frame');
-            if (frame) {
-                frame.style.display = 'none';
-                document.body.style.top = '0px';
-            }
-        }
-        window.addEventListener('load', function () {
-            setTimeout(hideGoogleTranslateBar, 1000);
-        });
-        function showLoading() {
-            $('#loadingOverlay').fadeIn(200);
-        }
-
-        function hideLoading() {
-            $('#loadingOverlay').fadeOut(200);
-        }
-
-        window.onload = function () {
-            const menuIcon = document.getElementById("menuToggle");
-            const logoWrapper = document.getElementById("menuMDesk");
-            const logoImage = document.getElementById("logoImage");
-            if (menuIcon && logoWrapper && logoImage) {
-            menuIcon.addEventListener("click", function () {
-                this.classList.toggle("active");
-                logoWrapper.classList.toggle("header-colored");
-
-                const currentSrc = logoImage.getAttribute("src");
-                const altSrc = logoImage.getAttribute("data-alt-src");
-
-                logoImage.setAttribute("src", altSrc);
-                logoImage.setAttribute("data-alt-src", currentSrc);
-            });
-            } else {
-            console.warn("Không tìm thấy phần tử:", {
-                menuIcon,
-                logoWrapper,
-                logoImage
-            });
-            }
-        };
-    </script>
-    <script type="text/javascript">
-             function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-                pageLanguage: 'vi',
-                includedLanguages: 'en,vi,ja,zh-CN,fr,de,ko',
-                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-            }, 'google_translate_element');
-
-            setTimeout(function () {
-                document.documentElement.classList.remove("translating");
-            },500);
-        }
-    </script>
-    <script src="~/web/assets/js/vendor/tsl.js?cb=googleTranslateElementInit"></script>
-    <script src="~/ajax/webappclient.settinghome.js"></script>
+    <div id="google_translate_element" style="display:none"></div>
+    @await Html.PartialAsync("_ScriptsBundle")
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
